--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -37,6 +37,13 @@
 			<div id="result"></div>
 		</div>
 	</div>
+	<form id="Person">
+		<label> Fullname: </label>
+		<input id="fullname" type="text" value="">
+		<label> Email: </label>
+		<input id="email" type="text" value="">
+		<button type="submit" onclick="submitForm(event); return false;">Submit</button>
+	</form>
 </body>
 
 </html>
